<resources>
    <string name="app_name">Pantastico</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="notifications">Notificacions</string>
    <string name="profile">Profile</string>
    <string name="shop">Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_pass">User/Pass</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="gmail">Gmail</string>
    <string name="Repeat_password">Password confirm</string>
    <string name="register_form">Register Form</string>
    <string name="back">Back</string>
    <string name="remember_password">Remember password</string>
    <string name="users">Users</string>
    <string name="events">Events</string>
    <string name="orders">Orders</string>
    <string name="product">Products</string>
    <string name="logout">Logout</string>
    <string name="Admin">Admin</string>
    <string name="add_producto">Add product</string>
    <string name="buy">Buy</string>
    <string name="join">Join Event</string>
    <string name="cancel">Cancel</string>
    <string name="aceptOrder">Accept</string>
    <string name="Accept">Accept</string>
    <string name="bp">Backpack</string>
    <string name="chat">Chat</string>
    <string name="precio">Precio</string>

    <string-array name="currency_array">
        <item>€ Euro</item>
        <item>$ Dólar</item>
        <item>¥ Yen</item>

    </string-array>


    <string name="button_product_history">Product History</string>
    <string name="button_assisted_events">Events</string>
    <string name="button_charts">Charts</string>
    <string name="button_logout">Log out</string>
    <string name="button_save">Save Changes</string>
</resources>