<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main.Login"
    android:background="@drawable/recurso_4"

    >
    >
    <LinearLayout
        android:layout_marginTop="30dp"
        android:id="@+id/linearLayoutLogo"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:adjustViewBounds="true"
            android:src="@drawable/portada" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUserPass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/baseline_person_24"
        android:text="@string/user_pass"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorOnPrimary"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutLogo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutUser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/email"

        app:errorTextColor="@color/black"
        android:visibility="gone"
        app:counterMaxLength="@integer/user_max_length"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnUserPass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:nextFocusForward="@id/editTextPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:visibility="gone"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutUser">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>
    <!-- CheckBox para Recordar contraseña -->


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        android:layout_width="200dp"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorOnPrimary"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/login"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword" />

    <CheckBox
        android:id="@+id/checkboxRememberPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_password"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin" />


    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        android:text="@string/no_account"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxRememberPassword" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        android:layout_width="100dp"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorOnPrimary"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewRegister" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Google"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/icons8_gmail"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/gmail"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorOnPrimary"
        android:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>